; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regproc.c_REGPROC_resize_binary_buffer.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regproc.c_REGPROC_resize_binary_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i64*, i64)* @REGPROC_resize_binary_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @REGPROC_resize_binary_buffer(i32** %0, i64* %1, i64 %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i32** %0, i32*** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load i64*, i64** %5, align 8
  %9 = load i64, i64* %8, align 8
  %10 = icmp sgt i64 %7, %9
  br i1 %10, label %11, label %35

11:                                               ; preds = %3
  %12 = load i64, i64* %6, align 8
  %13 = load i64*, i64** %5, align 8
  store i64 %12, i64* %13, align 8
  %14 = load i32**, i32*** %4, align 8
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %23, label %17

17:                                               ; preds = %11
  %18 = call i32 (...) @GetProcessHeap()
  %19 = load i64*, i64** %5, align 8
  %20 = load i64, i64* %19, align 8
  %21 = call i32* @HeapAlloc(i32 %18, i32 0, i64 %20)
  %22 = load i32**, i32*** %4, align 8
  store i32* %21, i32** %22, align 8
  br label %31

23:                                               ; preds = %11
  %24 = call i32 (...) @GetProcessHeap()
  %25 = load i32**, i32*** %4, align 8
  %26 = load i32*, i32** %25, align 8
  %27 = load i64*, i64** %5, align 8
  %28 = load i64, i64* %27, align 8
  %29 = call i32* @HeapReAlloc(i32 %24, i32 0, i32* %26, i64 %28)
  %30 = load i32**, i32*** %4, align 8
  store i32* %29, i32** %30, align 8
  br label %31

31:                                               ; preds = %23, %17
  %32 = load i32**, i32*** %4, align 8
  %33 = load i32*, i32** %32, align 8
  %34 = call i32 @CHECK_ENOUGH_MEMORY(i32* %33)
  br label %35

35:                                               ; preds = %31, %3
  ret void
}

declare dso_local i32* @HeapAlloc(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32* @HeapReAlloc(i32, i32, i32*, i64) #1

declare dso_local i32 @CHECK_ENOUGH_MEMORY(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
